--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@doop/service-db",
+  "name": "@doop/db",
   "version": "1.0.0",
   "description": "A database service for the Doop framework",
   "repository": {
